Path:of to Paths:get